# Try_rag

./: .gitignore  README.md  main.py  planner (1).py  planner.py  planner_tool.py  pyproject.toml
.ocontext/: context_20260117T134327.txt
chroma_store/: chroma.sqlite3  topic_centroids.json
data/: rag_chunks.py  rag_chunks_data_clean.py  rag_chunks_data_clean_old.py  txt.py
manifests/: planner_runs.xlsx  prompt_manifest_20260118_153305.json  prompt_manifest_20260118_153656.json  prompt_manifest_20260118_204517.json  prompt_manifest_20260118_204538.json  prompt_manifest_20260118_204557.json  prompt_manifest_20260118_204618.json  prompt_manifest_20260118_204635.json  prompt_manifest_20260118_204649.json  prompt_manifest_20260118_204750.json  prompt_manifest_20260118_204826.json  prompt_manifest_20260118_204853.json  prompt_manifest_20260118_204943.json  prompt_manifest_20260118_205313.json  prompt_manifest_20260119_083524.json  prompt_manifest_20260119_084103.json  prompt_manifest_20260119_093233.json  prompt_manifest_20260119_095355.json  prompt_manifest_20260119_100502.json  prompt_manifest_20260119_102006.json  prompt_manifest_20260119_103113.json  prompt_manifest_20260119_103508.json  prompt_manifest_20260119_103721.json  prompt_manifest_20260119_104524.json  prompt_manifest_20260119_110149.json  prompt_manifest_20260119_115641.json  prompt_manifest_20260119_115703.json  prompt_manifest_20260119_115733.json  prompt_manifest_20260119_115802.json  prompt_manifest_20260119_115841.json  prompt_manifest_20260119_115905.json  prompt_manifest_20260119_115923.json  (+32 more)
(+43 files in other folders)
